--- a/记录/1.md
+++ b/记录/1.md
@@ -1,1 +1,8 @@
 # Classify
+2017/9/18
+
+   今天主要看了一些andriod的视频，并且创建了Classify项目，并把项目关联到了github上面。
+   
+   给自己定下目标，每天要将所做的内容纪录下来和项目也就是自己的毕设一起提交到github。
+
+   今天主要学习到的就是从视频中学习的activity的知识。
