--- a/Classify/app/src/main/res/values/strings.xml
+++ b/Classify/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="id">邮箱</string>
+    <string name="pwd">密码</string>
+    <string name="regist">注册</string>
+    <string name="major">专业或工作</string>
+    <string name="loginBtnText">登录</string>
 </resources>
