--- a/Classify/app/src/main/res/values/strings.xml
+++ b/Classify/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="regist">注册</string>
     <string name="major">专业或工作</string>
     <string name="loginBtnText">登录</string>
+    <string name="loading">正在登录</string>
 </resources>
