--- a/Classify/app/src/main/res/values/strings.xml
+++ b/Classify/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="major">专业或工作</string>
     <string name="loginBtnText">登录</string>
     <string name="loading">正在登录</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
+    <string name="title_activity_main2">Main2Activity</string>
 </resources>
